--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity"
     android:orientation="vertical"
-    >
+    android:background="@color/mainColor">
 
     <EditText
         android:id="@+id/etHeroSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/HeroSearchHinit"
-        android:textColor="@color/colorWhite" />
+        android:background="@drawable/custom_edit_text"
+        android:layout_marginHorizontal="@dimen/edit_text_margin"
+        android:padding="@dimen/edit_text_padding"
+        />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -22,10 +23,13 @@
 
         <GridView
             android:id="@+id/gvAllHeroes"
+            android:padding="@dimen/grid_view_padding"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:numColumns="2"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:horizontalSpacing="@dimen/spacing"
+            android:verticalSpacing="@dimen/spacing"
+            />
 
         <TextView
             android:id="@+id/tvHeroesNoItems"
@@ -39,8 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:indeterminate="true"
-
+            android:indeterminateTint="@color/colorSecondary"
             />
 
     </FrameLayout>
