--- a/app/src/main/res/layout/activity_hero.xml
+++ b/app/src/main/res/layout/activity_hero.xml
@@ -1,9 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.HeroActivity">
+    tools:context=".activities.HeroActivity"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/tvHeroName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_margin="@dimen/hero_margin"
+            />
+
+        <TextView
+            android:id="@+id/tvHeroHeight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_margin="@dimen/hero_margin"
+            />
+        <TextView
+            android:id="@+id/tvHeroMass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_margin="@dimen/hero_margin"
+            />
+        <TextView
+            android:id="@+id/tvHeroBirthYear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_margin="@dimen/hero_margin"
+            />
+        <TextView
+            android:id="@+id/tvHeroGender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_margin="@dimen/hero_margin"
+            />
+
+    <TextView
+        android:id="@+id/tvHeroNoItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
+
+    <ProgressBar
+        android:id="@+id/pbHero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/mainColor"
+        />
+
+</LinearLayout>
